--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend con Typescript para proyecto personal",
   "main": "server.js",
   "scripts": {
-    "dev": "ts-node ./src/server.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts", 
+    "start": "ts-node ./src/server.ts"
   },
   "author": "dani9oo",
   "license": "MPL-2.0",
@@ -17,14 +18,14 @@
     "mongoose": "^5.10.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3",
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
-    "@types/node": "^14.11.2"
+    "@types/node": "^14.11.2",
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   }
 }
