--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts",
-    "start": "ts-node ./src/server.ts",
-    "build": "tsc"
+    "start": "node ./dist/server.js",
+    "build": "tsc",
+    "deploy": "sls deploy",
+    "offline": "sls offline start"
   },
   "author": "dani9oo",
   "license": "MPL-2.0",
@@ -16,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.7"
+    "mongoose": "^5.10.7",
+    "serverless-http": "^2.6.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
@@ -26,6 +29,9 @@
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.2",
     "nodemon": "^2.0.4",
+    "serverless": "^2.19.0",
+    "serverless-dotenv-plugin": "^3.1.0",
+    "serverless-offline": "^6.8.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
