--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^14.11.2",
     "nodemon": "^2.0.4",
     "serverless": "^2.19.0",
+    "serverless-domain-manager": "^5.1.0",
     "serverless-dotenv-plugin": "^3.1.0",
     "serverless-offline": "^6.8.0",
     "ts-node": "^9.0.0",
