--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MPL-2.0",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.3.2",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
