--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend con Typescript para Vitae",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/server.ts",
+    "dev": "nodemon --watch 'dist/**/*.js' ./dist/server.js",
     "start": "node ./dist/server.js",
     "build": "tsc",
     "deploy": "sls deploy",
@@ -17,24 +17,28 @@
     "class-transformer": "^0.3.2",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.13",
+    "mongoose": "^5.13.7",
     "serverless-http": "^2.7.0"
   },
   "devDependencies": {
-    "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.9",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.11",
-    "@types/mongoose": "^5.10.3",
-    "@types/node": "^14.14.22",
-    "nodemon": "^2.0.7",
-    "serverless": "^2.20.1",
-    "serverless-domain-manager": "^5.1.0",
-    "serverless-dotenv-plugin": "^3.1.0",
-    "serverless-offline": "^6.8.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "@types/body-parser": "^1.19.1",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^14.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "nodemon": "^2.0.12",
+    "serverless": "^2.55.0",
+    "serverless-domain-manager": "^5.1.5",
+    "serverless-dotenv-plugin": "^3.9.0",
+    "serverless-offline": "^6.9.0",
+    "typescript": "^4.3.5"
   }
 }
