--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
+      - name: Install rsync
+      - run: apt-get install rsync
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.4.1
         with:
